[package]
name = "rs-build"
version = "0.1.0"
authors = ["徐志强 <652732310@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
anyhow = "1.0"
parity-wasm = "0.41"
hex = "0.4.0"
wasmprinter = "0.2.3"
pwasm-utils = "0.12.0"